<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wifi_config_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/top_bar_bg" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/common_title_back_selector"
            android:onClick="onClick" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/tiltle_button_selector"
            android:contentDescription=""
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/cancel"
            android:textColor="@color/black_text"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="设备添加"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/addCameraContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgAnimation"
                android:layout_width="wrap_content"
                android:layout_height="185dp"
                android:src="@drawable/failure_account" />

            <TextView
                android:id="@+id/tvSuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="添加成功"
                android:textColor="@color/title_text"
                android:textSize="15sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/add_camera_success_tip"
                android:textColor="@color/add_title_text_color"
                android:textSize="13sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnAddCameraSuccess"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_btn_selector"
                android:text="添加成功"
                android:textColor="@color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnRetry"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/ez_reaty_btn_selector"
                android:text="重试"
                android:textColor="@color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnLineConnet"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_btn_selector"
                android:text="@string/ez_auto_wifi_line_connect"
                android:textColor="@color/white"
                android:visibility="gone" />

            <View
                android:id="@+id/helpTop"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/help"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="去帮助看看"
                android:textColor="@color/help_link"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>

        <!-- <View -->
        <!-- android:layout_width="1dp" -->
        <!-- android:layout_height="0dp" -->
        <!-- android:layout_weight="1" /> -->

        <TextView
            android:id="@+id/tvDeviceWifiConfigTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/wifi_connection_finish_need_refresh"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_selector"
            android:gravity="center_horizontal|center_vertical"
            android:text="完成"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/llyCloundService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:visibility="gone" >

            <CheckBox
                android:id="@+id/ckbCloundService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:background="@drawable/ckb_selector"
                android:button="@null"
                android:checked="false"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="开通免费云存储"
                android:textColor="@color/auto_tip_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="了解更多"
                android:textColor="@color/auto_blue_text"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineConnectContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="38dp"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/imgLineConnectGuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:src="@drawable/wifi_connect_tip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/auto_wifi_line_msg"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnLineConnetOk"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_btn_selector"
            android:text="我已连接好"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/connectStateContainer"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="80dp"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/llyStatus1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/auto_wifi_connecting_status_item" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llyStatus2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/auto_wifi_connecting_status_item" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llyStatus3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/auto_wifi_connecting_status_item" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>